charts/ops/elastic/kibana/templates/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: kibana-gw
  namespace: elasticsearch
spec:
  servers:
    - hosts:
        - kibana.prod.cluster.yanychoi.site
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: kibana-gw-tls
        mode: SIMPLE
    - hosts:
        - kibana.prod.cluster.yanychoi.site
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
  namespace: elasticsearch
spec:
  hosts:
  - kibana.prod.cluster.yanychoi.site
  gateways:
  - kibana-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 5601
        host: kibana
